Final set of changes for the final examination, hopefully.

--- a/exams/exam3_2014.tex
+++ b/exams/exam3_2014.tex
@@ -91,13 +91,12 @@ Final Examination \\
 
 \end{center}
 
-\noindent
-Answer the five questions that are listed on the following pages.  You must provide answers to these questions on a
-separate sheet of paper.  Please develop responses that clearly express your ideas in the most succinct manner possible.
-You are not permitted to complete this examination in conjunction with any of your classmates.  Furthermore, you cannot
-consult any outside references during this examination.  If you have questions concerning the following problems, then
-please visit my office during the examination period.  If you leave the classroom to take the exam, then you are
-responsible for checking the white board for status updates.
+\noindent Answer the ten questions that are listed on the following pages.  You must provide answers to these questions
+on a separate sheet of paper.  Please develop responses that clearly express your ideas in the most succinct manner
+possible.  You are not permitted to complete this examination in conjunction with any of your classmates.  Furthermore,
+you cannot consult any outside references during this examination.  If you have questions concerning the following
+problems, then please visit my office during the examination period.  If you leave the classroom to take the exam, then
+you are responsible for checking the white board for status updates.
 
 %\mbox{} \newline
 %\mbox{} \newline
@@ -118,7 +117,7 @@ responsible for checking the white board for status updates.
         \item The operating system kernel
         \item The existence of user programs
         \item The hardware of a modern computer
-        \item The interface between the hardware and software
+        \item The interface between the hardware and the software
         \item The interaction between kernel and user programs
 
       \end{enumerate}
@@ -142,7 +141,7 @@ responsible for checking the white board for status updates.
   \label{fig:clientserver}
 \end{figure}
 
-\item ({\bf 10 Points}) There are many basic concepts that under gird the fundamentals of operating systems.  Answer the
+\item ({\bf 10 Points}) There are many basic concepts that undergird the fundamentals of operating systems.  Answer the
   following questions about basic operating systems concepts.
 
   \begin{enumerate}
@@ -179,7 +178,7 @@ responsible for checking the white board for status updates.
       the RAM or the ROM?
 
     \item ({\bf 4 Points}) It is possible to divide up the computer's memory into address spaces.  What is an address
-      space?  What does it mean if an address space is dynamically relocatable? How could the MMU use base and limit
+      space?  What does it mean if an address space is dynamically relocatable? How could the MMU use the base and limit
       registers to support dynamic relocation?   
 
     \item ({\bf 3 Points}) The majority of modern operating systems support both virtual and physical memory.  After
@@ -222,11 +221,11 @@ responsible for checking the white board for status updates.
       % \item ({\bf 2 Points}) Quick fit
     \end{enumerate}
 
-  \item ({\bf 4 Points}) The memory manager should use an efficient algorithm to allocate a program to a free location in
+  \item ({\bf 3 Points}) The memory manager should use an efficient algorithm to allocate a program to a free location in
     memory.  What is the worst-case time complexity of the first fit and best fit algorithms?  Which, if any, of these
     two algorithms is likely to be faster?
 
-  \item ({\bf 2 Points}) Peter J.\ Denning proposed the working set model to characterize a program's use of computer
+  \item ({\bf 3 Points}) Peter J.\ Denning proposed the working set model to characterize a program's use of computer
     memory.  Draw a graph that visualizes the standard understanding of the working set.  Your graph should contain the
     following entities:
 
@@ -280,7 +279,7 @@ responsible for checking the white board for status updates.
       \item Class 3
     \end{itemize}
     
-    Using the $R$ and $W$ bits in your response, what is the meaning of these four classes?
+    Using the $R$ and $M$ bits in your response, what is the meaning of these four classes?
 
     \item ({\bf 2 Points}) One of the aforementioned classes contains an entity known at the VIP.  What is the meaning
       of this term? What does the NRU algorithm do with these VIPs?
@@ -364,8 +363,9 @@ responsible for checking the white board for status updates.
       client, X server, and the X protocol have in running an interface?
 
     \item ({\bf 3 Points}) The main paradigm for computing often oscillates between the use of thin clients and fat
-      clients.  What is the meaning of these two terms?  After furnishing an appropriate definiion of these client
-      types, please give an example of when one of the types would be best according to a well-defined metric.
+      clients.  What is the meaning of these two terms?  After furnishing an appropriate definition of these client
+      types, please give an example of a situation in which one of the types would be best according to a well-defined
+      metric.
 
   \end{enumerate}
 
@@ -376,7 +376,7 @@ responsible for checking the white board for status updates.
 
   \begin{enumerate}
 
-    \item ({\bf 4 Points}) Why would it be useful to run a power management module in the operating system that runs
+    \item ({\bf 4 Points}) Why would it be useful to run a power management module in the operating system that runs on
       either a server or a mobile device? Your response to this question should furnish two reasons for the server and
       two for the mobile device.
 
