Adding n the final version of the exam3 booklet.

--- a/exams/exam3_book.tex
+++ b/exams/exam3_book.tex
@@ -55,7 +55,7 @@
 \begin{center}
 
 CS 440: Operating Systems\\
-Interim Examination  \\ \mbox{} \\
+Final Examination  \\ \mbox{} \\
 Pledge: \\
 
 \vspace*{.5in}
@@ -64,7 +64,7 @@ Please neatly record your answers in this booklet!
 
 \vspace*{.5in}
 
-{\LARGE $\;\;\;\frac{}{50}$ }
+{\LARGE $\;\;\;\frac{}{100}$ }
 
 \end{center}
 
@@ -87,6 +87,28 @@ Please neatly record your answers in this booklet!
 \newpage
 
 {\bf Question 5} {\Large $\;\;\; \frac{}{10}$ }
+
+\newpage
+
+{\bf Question 6} {\Large $\;\;\; \frac{}{10}$ }
+
+\newpage
+
+{\bf Question 7} {\Large $\;\;\; \frac{}{10}$ }
+
+\newpage
+
+{\bf Question 8} {\Large $\;\;\; \frac{}{10}$ }
+
+\newpage
+
+{\bf Question 9} {\Large $\;\;\; \frac{}{10}$ }
+
+\newpage
+
+{\bf Question 10} {\Large $\;\;\; \frac{}{10}$ }
+
+% \newpage
 
 % \newpage
 
