--- a/labs/lab6/cs440S2014-lab6.tex
+++ b/labs/lab6/cs440S2014-lab6.tex
@@ -80,6 +80,8 @@ This assignment invites you to submit printed and signed versions of the followi
 
   \item The command lines that you used to compile and run the C and Java programs
 
+  \item The output from running the {\tt usesizeof} and {\tt UseSizeof} programs
+
   \item A comprehensive report that explains the results and responds to all of the stated questions 
 
   \item Suggestions for additional features to add to the variable sizing programs
