Added a missing word for the lab5 assignment.

--- a/labs/lab5/cs440S2014-lab5.tex
+++ b/labs/lab5/cs440S2014-lab5.tex
@@ -89,7 +89,7 @@ This assignment invites you to submit printed and signed versions of the followi
   \begin{enumerate}
 
   \itemsep0in
-    \item A clear description the behavior of each of the scheduling algorithms
+    \item A clear description of the behavior of each of the scheduling algorithms
     \item A commentary on how preemption and prioritization influences scheduling decisions
     \item A formal definition of the evaluation metrics used in your study
     \item A description of the job workloads used during the simulations
