Fixed the mistake in the final project that was only found later.

--- a/labs/labfp/cs440S2014-fp.tex
+++ b/labs/labfp/cs440S2014-fp.tex
@@ -62,7 +62,7 @@ then final approval.
     virtualization environments, the team members should either pick a type of problem that they want to solve with
     virtualization or a performance characterization of virtualization that they would like to conduct.  
 
-  \item {\bf Student-Design Project}: You and your team will develop an idea for your own project that focuses on
+  \item {\bf Student-Designed Project}: You and your team will develop an idea for your own project that focuses on
     advanced topics in operating systems. After receiving the instructor's approval for your idea, you will complete the
     project and report on your results.
     
